# asteroids5

./: .gitignore  CMakeLists.txt  README.md  main.cpp  sdl_message_handler.cpp  sdl_message_handler.hpp
gcore/: asteroid.cpp  asteroid.hpp  bullet.cpp  bullet.hpp  ship.cpp  ship.hpp  space_object.cpp  space_object.hpp  world.cpp  world.hpp
gfx/: gfx.cpp  gfx.hpp
